--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,25 @@
+@font-face {
+  font-family: 'JosefinSans';
+  src: url('./assets/JosefinSans-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JosefinSans';
+  src: url('./assets/JosefinSans-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'JosefinSans';
+  src: url('./assets/JosefinSans-Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+
 .App {
   text-align: center;
 }
